src/test/compile-fail/gated-tt_map.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

fn main() {
    __tt_map_insert!(A, B, C); //~ ERROR __tt_map_* is a hack
    let _foo = __tt_map_get_expr!(A, B, C); //~ ERROR __tt_map_* is a hack
}
